--- a/frontend/static/app.css
+++ b/frontend/static/app.css
@@ -13,29 +13,28 @@ body {
   min-height: 100%;
 }
 header {
-  background-image: linear-gradient(to right,  #85bb2e 0%, #35bd1a88 100%);
+  background-color: #ddd;
   padding: 0.15rem 0.45rem;
 
   box-shadow: 0 0 6rem 1rem #27026b8a;
 }
 header .header-container {
   padding: 0.25rem 0;
-  border-bottom: 1px solid #000000aa;
+  border-bottom: 2px solid #00000031;
   display: flex;
   align-items: center;
 }
 
 header .header-container img {
-  height: 3em;
+  height: 2em;
+  margin-right: 1em;
 }
 
 header h1 {
   font-size: 1.3rem;
-  background: #5f7a7a;
   border-radius: 4px;
-  color: white;
+  color: #5f5f5f;
   display: inline;
-  letter-spacing: 0.2rem;
   padding: 0.1rem 0.5rem;
   margin: 0;
 }
@@ -84,7 +83,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #f7890c;
+  color: #444242;
   font-weight: bold;
   font-style: italic;
 }
@@ -92,7 +91,9 @@ footer {
 footer .cloud {
   padding: 10px 20px;
   border-radius: 20px;
-  background: #36363640;
+  background: #ddd;
+
+  box-shadow: 0 0.5rem 1rem 0rem #2f244340;
 }
 
 footer a {
@@ -168,7 +169,7 @@ pre.flash {
   font-weight: bold;
   padding: 2em;
   border-radius: 8px;
-  font-size: 0.8em;
+  font-size: 1.1em;
 }
 pre.flash.error {
   border-color: #5e2416;
@@ -222,8 +223,8 @@ pre.flash.info {
 
 .page {
   padding: 2vw 4vw;
-  border-top: 0.2rem dashed #438bc8;
-  border-bottom: 0.2rem dashed #6999d0;
+  border-top: 0.4rem dashed #695b62;
+  border-bottom: 0.4rem dashed #7b6f6e;
   /* border-bottom: 0.2rem dashed #8a7232; */
   background: #d9d9d9;
   color: #432;
