login small fixes

--- a/frontend/static/app.css
+++ b/frontend/static/app.css
@@ -9,7 +9,7 @@ body {
 
   background-repeat: no-repeat;
   background-size: 100%;
-  background-image: linear-gradient(to bottom, #31091f 0%, #521821 100%);
+  background-image: linear-gradient(to bottom, #73615b 0%, #75727e 100%);
   min-height: 100%;
 }
 header {
